Fix nav-bar to stretch vertically when zooming out

--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
     margin: 0;
     padding: 0;
     background-color: #121212;
+    height: 3000px;
 }
 
 
@@ -34,10 +35,11 @@ a:visited {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
+    height: 100vh;
     min-width: 350px;
     position: sticky;
     top: 0;
+    border: 1px solid white;
 }
 
 #nav-bar-container {
@@ -46,7 +48,7 @@ a:visited {
     justify-content: center;
     align-items: center;
     gap: 20px;
-    min-height: 95vh;
+    min-height: 95%;
     width: 80%;
     border: 1px solid #575757;
     border-radius: 50px;
@@ -83,7 +85,6 @@ a:visited {
 #main-container {
     display: grid;
     grid-template-rows: auto;
-    height: 3000px;
     width: 100%;
     padding-left: 50px;
     padding-right: 50px;
